--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,17 @@
 
 /* Your CSS Code here. */
+
+.container{
+	background-color: green;
+	width: 100vw;
+	height: 100vh;
+	display:flex;
+	justify-content:center;
+	align-items: center;
+}
+
+.item-1{
+	width:50px;
+	height: 50px;
+	background-color: red;
+}
