--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,8 @@
 
 .holder{
 	display:flex;
+	justify-content:center;
+	align-items: center;
 	width:50px;
 	height: 50px;
 	background-color: red;
